@@ -9,6 +9,9 @@
   * "N" key will toggle back and forth between Nether and Overworld, if available.
   * Minimap rotated so that north points up (previously it had pointed left)
   * Added Y position to position popup
+  * Added support for new Beta 1.2 Blocks
+  * Added Lapis Lazuli to highlightable ore list, and changed mob spawner to
+    Mossy Cobblestone 
 
 Minecraft X-Ray 2.7 Maintenance Branch 4 (2010.12.16)
 
